--- a/model-endpoint/requirements.txt
+++ b/model-endpoint/requirements.txt
@@ -1,65 +1,71 @@
-absl-py==2.0.0
-annotated-types==0.6.0
-anyio==3.7.1
-astunparse==1.6.3
-attrs==23.1.0
-cachetools==5.3.2
-certifi==2023.7.22
-cffi==1.16.0
-charset-normalizer==3.3.1
-click==8.1.7
-contourpy==1.1.1
-cvzone==1.6.1
-cycler==0.12.1
-fastapi==0.104.0
-flatbuffers==23.5.26
-fonttools==4.43.1
-gast==0.5.4
-google-auth==2.23.3
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-grpcio==1.59.0
-h11==0.14.0
-h5py==3.10.0
-idna==3.4
-keras==2.14.0
-kiwisolver==1.4.5
-libclang==16.0.6
-Markdown==3.5
-MarkupSafe==2.1.3
-matplotlib==3.8.0
-mediapipe==0.10.7
-ml-dtypes==0.2.0
-numpy==1.26.1
-oauthlib==3.2.2
-opencv-contrib-python==4.8.1.78
-opencv-python==4.8.1.78
-opt-einsum==3.3.0
-packaging==23.2
-Pillow==10.1.0
-protobuf==3.20.3
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycparser==2.21
-pydantic==2.4.2
-pydantic_core==2.10.1
-pyparsing==3.1.1
-python-dateutil==2.8.2
-requests==2.31.0
-requests-oauthlib==1.3.1
-rsa==4.9
+apturl==0.5.2
+bcrypt==3.2.0
+blinker==1.4
+Brlapi==0.8.3
+certifi==2020.6.20
+chardet==4.0.0
+click==8.0.3
+colorama==0.4.4
+command-not-found==0.3
+cryptography==3.4.8
+cupshelpers==1.0
+dbus-python==1.2.18
+defer==1.0.6
+distro==1.7.0
+distro-info==1.1+ubuntu0.1
+duplicity==0.8.21
+fasteners==0.14.1
+future==0.18.2
+httplib2==0.20.2
+idna==3.3
+importlib-metadata==4.6.4
+jeepney==0.7.1
+keyring==23.5.0
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lockfile==0.12.2
+louis==3.20.0
+macaroonbakery==1.3.1
+Mako==1.1.3
+MarkupSafe==2.0.1
+monotonic==1.6
+more-itertools==8.10.0
+netifaces==0.11.0
+oauthlib==3.2.0
+olefile==0.46
+paramiko==2.9.3
+pexpect==4.8.0
+Pillow==9.0.1
+protobuf==3.12.4
+ptyprocess==0.7.0
+pycairo==1.20.1
+pycups==2.0.1
+PyGObject==3.42.1
+PyJWT==2.3.0
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+pyparsing==2.4.7
+pyRFC3339==1.1
+python-apt==2.4.0+ubuntu2
+python-dateutil==2.8.1
+python-debian==0.1.43+ubuntu1.1
+pytz==2022.1
+pyxdg==0.27
+PyYAML==5.4.1
+reportlab==3.6.8
+requests==2.25.1
+SecretStorage==3.3.1
 six==1.16.0
-sniffio==1.3.0
-sounddevice==0.4.6
-starlette==0.27.0
-tensorboard==2.14.1
-tensorboard-data-server==0.7.2
-tensorflow==2.14.0
-tensorflow-estimator==2.14.0
-tensorflow-io-gcs-filesystem==0.34.0
-termcolor==2.3.0
-typing_extensions==4.8.0
-urllib3==2.0.7
-uvicorn==0.23.2
-Werkzeug==3.0.1
-wrapt==1.14.1
+systemd-python==234
+ubuntu-advantage-tools==8001
+ubuntu-drivers-common==0.0.0
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==1.26.5
+usb-creator==0.3.7
+wadllib==1.3.6
+xdg==5
+xkit==0.0.0
+zipp==1.0.0
